# opus2mp3

./: .gitignore  1574153185044.audio  CMakeLists.txt  README.MD  armnormal.audio  main.c  opus2mp3  opusdet.c  pureopus.opus  pureopus60s.opus  usetime.py  wave.h  waveparser.c  wavgen.c  wavwriter.c  wavwriter.h
libopus/src/: opus_demo.c
