# For more information about using CMake with Android Studio, read the
# documentation: https://d.android.com/studio/projects/add-native-code.html

# Sets the minimum version of CMake required to build the native library.

cmake_minimum_required(VERSION 3.4.1)
project (opus2mp3)
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")


include_directories(
        liblame
        libopus/include
        libopus/celt
        libopus/silk
        libopus/silk/float
        libopus/src)

add_executable(
        wavparser
        waveparser.c
        )
add_executable(
        opus2mp3
        libopus/src/opus_multistream_decoder.c
        libopus/src/opus_multistream_encoder.c
        libopus/src/opus_multistream.c
        libopus/src/opus_encoder.c
        libopus/celt/celt_encoder.c
        libopus/celt/bands.c
        libopus/celt/entcode.c
        libopus/celt/entdec.c
        libopus/celt/entenc.c
        libopus/celt/mathops.c
        libopus/celt/vq.c
        libopus/celt/cwrs.c
        libopus/celt/celt.c
        libopus/celt/mdct.c
        libopus/celt/kiss_fft.c
        libopus/celt/bands.c
        libopus/celt/pitch.c
        libopus/celt/celt_lpc.c
        libopus/celt/quant_bands.c
        libopus/celt/laplace.c
        libopus/celt/modes.c
        libopus/celt/rate.c
        libopus/silk/lin2log.c
        libopus/silk/enc_API.c
        libopus/silk/resampler.c
        libopus/silk/resampler_private_IIR_FIR.c
        libopus/silk/resampler_private_up2_HQ.c
        libopus/silk/resampler_private_down_FIR.c
        libopus/silk/resampler_private_AR2.c
        libopus/silk/resampler_rom.c
        libopus/silk/float/encode_frame_FLP.c
        libopus/silk/gain_quant.c
        libopus/silk/log2lin.c
        libopus/silk/encode_pulses.c
        libopus/silk/code_signs.c
        libopus/silk/tables_pulses_per_block.c
        libopus/silk/tables_other.c
        libopus/silk/shell_coder.c
        libopus/silk/encode_indices.c
        libopus/silk/tables_LTP.c
        libopus/silk/tables_pitch_lag.c
        libopus/silk/NLSF_unpack.c
        libopus/silk/tables_gain.c
        libopus/silk/float/wrappers_FLP.c
        libopus/silk/quant_LTP_gains.c
        libopus/silk/VQ_WMat_EC.c
        libopus/silk/NSQ.c
        libopus/silk/LPC_analysis_filter.c
        libopus/silk/NSQ_del_dec.c
        libopus/silk/process_NLSFs.c
        libopus/silk/NLSF2A.c
        libopus/silk/bwexpander_32.c
        libopus/silk/LPC_inv_pred_gain.c
        libopus/silk/table_LSF_cos.c
        libopus/silk/NLSF_encode.c
        libopus/silk/NLSF_decode.c
        libopus/silk/NLSF_stabilize.c
        libopus/silk/sort.c
        libopus/silk/NLSF_VQ_weights_laroia.c
        libopus/silk/NLSF_del_dec_quant.c
        libopus/silk/NLSF_VQ.c
        libopus/silk/interpolate.c
        libopus/silk/float/wrappers_FLP.c
        libopus/silk/A2NLSF.c
        libopus/silk/float/process_gains_FLP.c
        libopus/silk/float/find_pred_coefs_FLP.c
        libopus/silk/float/residual_energy_FLP.c
        libopus/silk/float/energy_FLP.c
        libopus/silk/float/LPC_analysis_filter_FLP.c
        libopus/silk/float/find_LPC_FLP.c
        libopus/silk/float/burg_modified_FLP.c
        libopus/silk/float/inner_product_FLP.c
        libopus/silk/float/scale_copy_vector_FLP.c
        libopus/silk/float/LTP_analysis_filter_FLP.c
        libopus/silk/float/LTP_scale_ctrl_FLP.c
        libopus/silk/float/find_LTP_FLP.c
        libopus/silk/float/scale_vector_FLP.c
        libopus/silk/float/regularize_correlations_FLP.c
        libopus/silk/float/corrMatrix_FLP.c
        libopus/silk/float/noise_shape_analysis_FLP.c
        libopus/silk/float/bwexpander_FLP.c
        libopus/silk/float/LPC_inv_pred_gain_FLP.c
        libopus/silk/float/autocorrelation_FLP.c
        libopus/silk/float/warped_autocorrelation_FLP.c
        libopus/silk/float/apply_sine_window_FLP.c
        libopus/silk/float/find_pitch_lags_FLP.c
        libopus/silk/float/pitch_analysis_core_FLP.c
        libopus/silk/pitch_est_tables.c
        libopus/silk/float/sort_FLP.c
        libopus/silk/resampler_down2.c
        libopus/silk/resampler_down2_3.c
        libopus/silk/float/k2a_FLP.c
        libopus/silk/float/schur_FLP.c
        libopus/silk/LP_variable_cutoff.c
        libopus/silk/biquad_alt.c
        libopus/silk/VAD.c
        libopus/silk/sigm_Q15.c
        libopus/silk/ana_filt_bank_1.c
        libopus/silk/control_SNR.c
        libopus/silk/stereo_encode_pred.c
        libopus/silk/stereo_LR_to_MS.c
        libopus/silk/stereo_quant_pred.c
        libopus/silk/stereo_find_predictor.c
        libopus/silk/inner_prod_aligned.c
        libopus/silk/sum_sqr_shift.c
        libopus/silk/HP_variable_cutoff.c
        libopus/silk/control_codec.c
        libopus/silk/tables_NLSF_CB_NB_MB.c
        libopus/silk/tables_NLSF_CB_WB.c
        libopus/silk/control_audio_bandwidth.c
        libopus/silk/init_encoder.c
        libopus/silk/check_control_input.c
        libopus/src/analysis.c
        libopus/src/repacketizer.c
        libopus/src/opus.c
        libopus/src/opus_decoder.c
        libopus/src/opus_projection_encoder.c
        libopus/src/opus_projection_decoder.c
        libopus/src/mapping_matrix.c
        libopus/src/mapping_matrix.h
        libopus/celt/celt_decoder.c
        libopus/silk/dec_API.c
        libopus/silk/stereo_MS_to_LR.c
        libopus/silk/decode_frame.c
        libopus/silk/PLC.c
        libopus/silk/bwexpander.c
        libopus/silk/CNG.c
        libopus/silk/decode_core.c
        libopus/silk/decode_parameters.c
        libopus/silk/decode_pitch.c
        libopus/silk/decode_pulses.c
        libopus/silk/decode_indices.c
        libopus/silk/stereo_decode_pred.c
        libopus/silk/decoder_set_fs.c
        libopus/silk/init_decoder.c
        libopus/src/mlp.c
        libopus/src/mlp_data.c
        libopus/silk/LPC_fit.c
        #libopus/src/opus_demo.c
        liblame/bitstream.c 
        liblame/fft.c 
        liblame/id3tag.c 
        liblame/mpglib_interface.c 
        liblame/presets.c 
        liblame/quantize.c 
        liblame/reservoir.c 
        liblame/tables.c 
        liblame/util.c 
        liblame/VbrTag.c 
        liblame/encoder.c 
        liblame/gain_analysis.c 
        liblame/lame.c 
        liblame/newmdct.c 
        liblame/psymodel.c 
        liblame/quantize_pvt.c 
        liblame/set_get.c 
        liblame/takehiro.c 
        liblame/vbrquantize.c 
        liblame/version.c
        main.c
        wavwriter.c
        )

add_definitions(-DOUTSIDE_SPEEX -DOPUS_BUILD -DSTDC_HEADERS -DVAR_ARRAYS)